Change and fix project structure

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "web_project",
   "version": "1.0.0",
-  "description": "[SB Admin 2](https://startbootstrap.com/theme/sb-admin-2/) is an open source admin dashboard theme for [Bootstrap](https://getbootstrap.com/) created by [Start Bootstrap](https://startbootstrap.com/).",
+  "description": "",
   "main": "gulpfile.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
