Add OA annotations and swaggerUI

--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         }
     ],
     "require": {
-        "flightphp/core": "^3.8"
+        "flightphp/core": "^3.8",
+        "zircote/swagger-php": "3.3.7"
     }
 }
